--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3df2154c",
+   "id": "58293bf6",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5a51686",
+   "id": "95324f15",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "827ee1ea",
+   "id": "12c491d0",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0304ea",
+   "id": "23ca2a67",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "843df6b8",
+   "id": "7e1f993f",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ce2eecc8",
+   "id": "6c2aeeb3",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b08b59c6",
+   "id": "d4e2099c",
    "metadata": {},
    "outputs": [
     {
@@ -136,17 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c5331a74",
+   "execution_count": 32,
+   "id": "60690ebb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name : \n",
-      "Enter your company : csf\n",
-      "you haven't provided your name !!\n"
+      "Enter your name : Jurek\n",
+      "Enter your company : Bisco\n",
+      "Welcome fiend Jurek from company Bisco !!\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0fd37a6",
+   "id": "393948d4",
    "metadata": {},
    "outputs": [],
    "source": []
