--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa3d1598",
+   "id": "d10f53d8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "78c560dc",
+   "id": "ae62e67f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c124495",
+   "id": "cd139ff8",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b8adc5dc",
+   "id": "d8a36d56",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3d73f56f",
+   "id": "3b32928b",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "331e6152",
+   "id": "62dc978c",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6843c6d6",
+   "id": "6b76dc5b",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "598a3526",
+   "id": "8a842f3e",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08edf36c",
+   "id": "00760b0c",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "af4eecab",
+   "id": "f8361c5b",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f0622339",
+   "id": "90139010",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1491c162",
+   "id": "bb396a90",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "65072d01",
+   "id": "86678040",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "57825321",
+   "id": "7ec8e2be",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b93310a1",
+   "id": "50c55ec3",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "60c65bc8",
+   "id": "cffc4651",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "136ba56a",
+   "id": "c0314c62",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "938d1df9",
+   "id": "32fa13fe",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8a413eae",
+   "id": "5efdccc1",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3f1da3c8",
+   "id": "f7326c40",
    "metadata": {},
    "outputs": [
     {
@@ -414,17 +414,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a21641",
+   "id": "b02f6012",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
     "if (name=='Sara'or name=='sara'\n",
-    "    and company=='Cisco'or company=='cisco'):\n",
-    "    print('That is me!)\n",
+    "    and (company=='Cisco'or company=='cisco')):\n",
+    "    print('That is me!')\n",
     "elif (name=='Sara'or name=='sara'\n",
-    "    and company!'Cisco'or company!'cisco'):\n",
+    "    and company!='Cisco'or company!='cisco'):\n",
     "    print ('Hi, Sara!')\n",
     "elif company=='Cisco'or company=='cisco': \n",
     "    print('Hi, we are collegues!')\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f951e1fb",
+   "id": "349004b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ec4183",
+   "id": "446ff074",
    "metadata": {},
    "outputs": [],
    "source": []
