--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1a4bd0d1",
+   "id": "c7db9f3c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0242b3b6",
+   "id": "48ac461d",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4a07c55d",
+   "id": "1b06391e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4db79f6d",
+   "id": "dd735149",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9309665b",
+   "id": "c8df3544",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "40686842",
+   "id": "8fa99ce2",
    "metadata": {},
    "outputs": [
     {
@@ -125,13 +125,15 @@
     }
    ],
    "source": [
+    "myname= 'ahmed'\n",
+    "company= 'cisco'\n",
     "name= input ('Enter a name: ')\n",
-    "Company= input ('Enter a company name: ')\n",
-    "if name== ahmed and company== cisco :\n",
+    "comp= input ('Enter a company name: ')\n",
+    "if name== myname and comp== company :\n",
     "    print('you are me')\n",
-    "elif name == ahmed and company=! cisco:\n",
+    "elif name == myname and comp=! company:\n",
     "    print ('Hey there')\n",
-    "elif name=! ahmed and company== cisco:\n",
+    "elif name=! myna and company== cisco:\n",
     "    print (' Hello Colleague')\n",
     "else: \n",
     "    print ('Hello, who are you')"
@@ -140,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01dd5ed3",
+   "id": "8a8fe043",
    "metadata": {},
    "outputs": [],
    "source": []
