--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "62a90e07",
    "metadata": {},
    "outputs": [
@@ -117,9 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: Dima\n",
+      "Enter your name: dima\n",
       "Enter your company: cisco\n",
-      "You are me!\n"
+      "Hello dima we are colleagues!\n"
      ]
     }
    ],
@@ -130,17 +130,17 @@
     "if name == 'Dima' and company == 'cisco':\n",
     "    print('You are me!')\n",
     "elif name == 'Dima' and company != 'cisco':\n",
-    "    print(f'Hello {name} from {company}')\n",
+    "    print(f'Hello {name} from {company}, you have butiful name!')\n",
     "elif name != 'Dima' and company == 'cisco':\n",
-    "    print(f'HEllo {name} we are colleagues!')\n",
+    "    print(f'Hello {name}, we are colleagues!')\n",
     "else:\n",
-    "    print(f'Helo {name} from {company}! nice to meet you')"
+    "    print(f'Helo {name} from {company}, nice to meet you!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08312007",
+   "id": "af329689",
    "metadata": {},
    "outputs": [],
    "source": []
