--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -309,27 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "f2d9881a",
+   "execution_count": null,
+   "id": "46a43ba9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter user name: Jaspreet\n",
-      "Enter company name: Cisco\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'Jaspreet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[45], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter user name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m company \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter company name: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[43mJaspreet\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m company \u001b[38;5;241m==\u001b[39m Cisco:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre me!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m Jaspreet \u001b[38;5;129;01mand\u001b[39;00m Company \u001b[38;5;241m!=\u001b[39m Cisco:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Jaspreet' is not defined"
+      "Enter user name: Jaspreet\n"
      ]
     }
    ],
@@ -350,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "580fe71d",
+   "id": "2864b28e",
    "metadata": {},
    "outputs": [],
    "source": []
