--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7db9f3c",
+   "id": "4a9a9100",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "48ac461d",
+   "id": "ee6a9f4f",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1b06391e",
+   "id": "b746e38b",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dd735149",
+   "id": "f969666c",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c8df3544",
+   "id": "a045254d",
    "metadata": {},
    "outputs": [
     {
@@ -111,29 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "8fa99ce2",
+   "execution_count": 34,
+   "id": "b0c2cc77",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (3834421311.py, line 5)",
+     "evalue": "invalid syntax (2316370057.py, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[33], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif name == 'ahmed' and company=get_ipython().getoutput(\" 'cisco':\")\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[34], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif name == myname and comp=get_ipython().getoutput(' mycompany:')\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "myname= 'ahmed'\n",
-    "company= 'cisco'\n",
     "name= input ('Enter a name: ')\n",
-    "comp= input ('Enter a company name: ')\n",
-    "if name== myname and comp== company :\n",
+    "Company= input ('Enter a company name: ')\n",
+    "if name== ahmed and company== cisco :\n",
     "    print('you are me')\n",
-    "elif name == myname and comp=! company:\n",
+    "elif name == ahmed and company=! cisco:\n",
     "    print ('Hey there')\n",
-    "elif name=! myna and company== cisco:\n",
+    "elif name=! ahmed and company== cisco:\n",
     "    print (' Hello Colleague')\n",
     "else: \n",
     "    print ('Hello, who are you')"
@@ -142,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8fe043",
+   "id": "b43fd0b3",
    "metadata": {},
    "outputs": [],
    "source": []
