--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "62a90e07",
    "metadata": {},
    "outputs": [
@@ -117,9 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: dima\n",
-      "Enter your company: cisco\n",
-      "Hello dima we are colleagues!\n"
+      "Enter your name: Dima\n",
+      "Enter your company: HP\n",
+      "Hello Dima from HP, you have butiful name!\n"
      ]
     }
    ],
@@ -128,9 +128,9 @@
     "name = input('Enter your name: ')\n",
     "company = input('Enter your company: ')\n",
     "if name == 'Dima' and company == 'cisco':\n",
-    "    print('You are me!')\n",
+    "    print('You are me, I am you!')\n",
     "elif name == 'Dima' and company != 'cisco':\n",
-    "    print(f'Hello {name} from {company}, you have butiful name!')\n",
+    "    print(f'Hello {name} from {company}, you have beautiful name!')\n",
     "elif name != 'Dima' and company == 'cisco':\n",
     "    print(f'Hello {name}, we are colleagues!')\n",
     "else:\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af329689",
+   "id": "574a3cfd",
    "metadata": {},
    "outputs": [],
    "source": []
